# Vega_cppHomework

./: CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark_example.cpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_example.cpp
